docroot/includes/deed4.css
/* ... */
li.nolaw {
    background: url("/images/deed/nolaw.png") 0 8px no-repeat;
}

li ul li.nolaw {
    background: url("/images/deed/nolaw-small.png") 0 8px no-repeat;
    padding-left: 32px;
}

li.usage-guidelines {
    background: url("/images/deed/usage-guidelines.png") 0 0 no-repeat;
    margin-bottom: 25px;
}

li ul li.usage-guidelines {
    background: url("/images/deed/usage-guidelines-small.png") 0 6px no-repeat;
    padding-left: 32px;
    margin-bottom: 0;
}

li.publicdomain {
    background: url("/images/deed/noc.png") 0 3px no-repeat;
}

li a {
    color: #049CCF;
    text-decoration: none;
}

#referrer-metadata {
    padding: 20px;
    border-style: dotted;
}

#referrer-metadata a {
    color: #0000FF;
    text-decoration: none;
}

blockquote {
    padding:  8px;
    background-color:  #eee;
    margin:  15px 0;
    clear: both;
}

h3 {
    font-size: 1.75em;
    margin: 1em .8em;

}

#libre {
  margin-top: 1em;
}

#librepd {
    width: 150px;
    float: right;
}

#libre img, #libre a, #librepd img, #librepd a {
    margin-top: 24px;
    max-width: 140px;
    height: auto;
    border: none !important;
}

p.learn-more-cc {
  text-align: center;
  margin: 1em;
}

@media only screen and (max-width : 992px) {
    #libre img {
        max-width: 100px;
    }
}

@media only screen and (max-width : 768px) {
    #libre {
        display: none;
        width: 100px;
        height: 100px;
    }

    #libre img, #libre a, #librepd img, #librepd a {
        display: none;
        height: auto;
        border: none !important;
    }
}

div.bd p {
    color: #111;
    line-height:140%;
    padding-bottom:10px !important;
    font-size: 0.92em;
    margin: 0 !important;
}

#work-attribution-container {
    border: 1px solid #D5D5D5;
    margin-top: 10px;
    padding: 7px;
}

#work-attribution-container input {
    width: 93%;
    border: 1px #888a85 solid;
    height: 1.9em;
}

#attribution_help img, #citation_help img {
    border: 0;
    margin: 0;
    float: none;
}

#work-details-block div {
    margin-top: 0px;
    padding-top:15px;
    padding-bottom: 0px;
    border-top: 1px solid #ddd;
}

#work-details-block div ul {
    list-style: none;
}

#work-details-item-title {
    display: inline-block;
    width: 6em;
    text-align: right;
    margin-right: 0.5em;
}

/* This is for the GNU/GPL license: list must start at 0 and the attribute start='0' is not allowed in xhtml*/
ol.gpl {
    counter-reset: item -1;
}

li.gpl {
    list-style: none;
}

li.gpl:before {
    content: counter(item) ". ";
    counter-increment: item;
}

/* CC Network Related */
.network {
    padding: 8px !important;
    margin-top: 1em !important;
    background-color: #d4efb9;
}

/* Language translations box */
div#languages {
    text-align: center;
    font-size: 0.9em;
    padding-bottom: 50px;
}

div#languages a {
}

div#languages p {
    margin-top: 0;
}

.help_panel {
    display:none;
}

#help_publicity_rights, #help_endorsement, #help_citation_help, #help_who_is_affirmer, #help_disclaimer {
    visibility: hidden;
    height: 0;
}

#help_publicity_rights_c > #help_publicity_rights,
#help_endorsement_c > #help_endorsement,
#help_citation_ehlp_c > #help_citation_help,
#help_who_is_affirmer_c > #help_who_is_affirmer_c,
#help_disclaimer_c > #help_disclaimer {
    height: auto;
}

ol.arabic-markers {
    list-style-type: none;
}

#thank-you-footer {
    max-width: 600px;
    margin: 0 auto;
    padding: 1em;
}

#thank-you-footer p {
    text-align: left;
}


#footer {
    margin-top: 44px;
}


/* Small device adjustments */
@media screen and (max-width: 768px) {
    html {
        -ms-text-size-adjust: 100%;
        -moz-text-size-adjust: 100%;
        -webkit-text-size-adjust: 100%;
    }

    #deed {
        margin: 0;
        padding: 0;
    }

    #deed,
    #deed-head,
    #cc-link a,
    #deed-disclaimer,
    ul.license-properties {
        width: auto;
    }

    #deed-main,
    .green #deed-rights ul.license-properties {
        /* need style trumps */
        width: auto !important;
    }

    #deed-head,
    #deed-rights,
    #deed-conditions,
    #deed-understanding {
        /* trump rtl positioning */
        background-position: center top !important;
    }

    #deed-main-content {
        margin: 0;
    }

    #deed-disclaimer {
        margin: 0 10px;
    }

    .green #deed-disclaimer {
        margin-right: 100px;
    }

    #libre {
        right: 10px;
    }

    ul {
        padding: 0 10px;
    }

    li.license {
        padding-bottom: 0;
    }

    #deed-understanding {
        margin-bottom: 0;
    }

    #thank-you-footer {
        max-width: 90%;
    }

}


/* Donate Footer Styles
------------------------------------ */
#deed-donate-footer {
    background-color: #424242;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    width: 768px;
    padding: 10px 0;
    color: #333;
    margin: 20px auto;
}

.footer-trigger {
    background-color: #fff;
    width: 710px;
    margin: 0 auto;
    padding: 20px;
}

.footer-logo {
    float: left;
    margin-right: 20px;
}

.footer-trigger p {
    text-align: left;
    margin: 0;
}

.footer-trigger button {
    background: rgba(152,182,0,.8);
    display:inline-block;
    text-align: center;
    padding: .5em 1em;
    border: 0;
    -webkit-border-radius: 5px 5px 5px 5px;
    border-radius: 5px 5px 5px 5px;
    -webkit-box-shadow:inset 2px 2px 6px 0 rgba(0,0,0,.2);
    box-shadow:inset 2px 2px 6px 0 rgba(0,0,0,.2);
    font-size: 20px;
    color: #fff;
    font-weight: bold;
    margin: 15px 0 0;
    text-decoration: none;
    cursor: pointer;
    -webkit-transition: all .3s ease-in-out;
    -moz-transition: all .3s ease-in-out;
    -ms-transition: all .3s ease-in-out;
    -o-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
}

.footer-trigger button:hover {
    background: rgba(152,182,0,1);
}
/* ... */

